# nerdos

./: .gitignore  README.md  k210.cfg
.github/workflows/: build.yml
dependencies/elf_rs/: Cargo.toml  LICENSE  README.md
dependencies/elf_rs/examples/: readelf.rs
dependencies/elf_rs/src/: lib.rs
dependencies/elf_rs/src/elf/: elf.rs  mod.rs
dependencies/elf_rs/src/elf_header/: elf_header.rs  mod.rs
dependencies/elf_rs/src/program_header/: mod.rs  program_header32.rs  program_header64.rs
dependencies/elf_rs/src/section_header/: mod.rs  section_header.rs
dependencies/elf_rs/tests/: integration_tests.rs
dependencies/k210-hal/: CODE_OF_CONDUCT.md  Cargo.toml  README.md
dependencies/k210-hal/.github/workflows/: clippy-check.yml  cross-compile.yml  security-audit.yml
dependencies/k210-hal/src/: aes.rs  apu.rs  cache.rs  clint.rs  clock.rs  dmac.rs  fft.rs  fpioa.rs  gpio.rs  gpiohs.rs  lib.rs  plic.rs  serial.rs  sha256.rs  spi.rs  stdout.rs  sysctl.rs  time.rs
dependencies/k210-pac/: .travis.yml  Cargo.toml  README.md  build.rs  k210.svd  memory-k210.x  update.sh
dependencies/k210-pac/ci/: install.sh  script.sh
dependencies/k210-pac/src/: lib.rs
dependencies/k210-soc/: Cargo.toml
dependencies/k210-soc/src/: dmac.rs  fpioa.rs  gpio.rs  gpiohs.rs  lib.rs  plic.rs  sleep.rs  spi.rs  sysctl.rs  uarths.rs  utils.rs
dependencies/k210-soc/src/sysctl/: pll_compute.rs
dependencies/nezha_sdc/: Cargo.toml  ReadMe.md
dependencies/nezha_sdc/src/: lib.rs
dependencies/riscv/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  asm.S  asm.h  assemble.sh  build.rs  check-blobs.sh
dependencies/riscv/ci/: install.sh  script.sh
dependencies/riscv/descriptor/: generate_hypervisor_csr.sh  generator.rs  hcounteren.txt  hedeleg.txt  hgatp.txt  hgeie.txt  hgeip.txt  hideleg.txt  hie.txt  hip.txt  hstatus.txt  htimedelta.txt  htimedeltah.txt  htinst.txt  htval.txt  hvip.txt  vsatp.txt  vscause.txt  vsepc.txt  vsie.txt  vsip.txt  vsscratch.txt  vsstatus.txt  vstval.txt  vstvec.txt
dependencies/riscv/src/: asm.rs  interrupt.rs  lib.rs
dependencies/riscv/src/addr/: gpax4.rs  mod.rs  page.rs  sv32.rs  sv39.rs  sv48.rs
dependencies/riscv/src/paging/: frame_alloc.rs  mapper.rs  mod.rs  multi_level.rs  multi_level_x4.rs  page_table.rs  page_table_x4.rs
dependencies/riscv/src/register/: fcsr.rs  hpmcounterx.rs  macros.rs  marchid.rs  mcause.rs  mcycle.rs  mcycleh.rs  medeleg.rs  mepc.rs  mhartid.rs  mhpmcounterx.rs  mhpmeventx.rs  mideleg.rs  mie.rs  mimpid.rs  minstret.rs  minstreth.rs  mip.rs  misa.rs  mod.rs  mscratch.rs  mstatus.rs  mtval.rs  mtvec.rs  mvendorid.rs  pmpaddrx.rs  pmpcfgx.rs  satp.rs  scause.rs  sepc.rs  sie.rs  sip.rs  sscratch.rs  sstatus.rs  stval.rs  stvec.rs  time.rs  timeh.rs  ucause.rs  uepc.rs  (+6 more)
dependencies/riscv/src/register/hypervisorx64/: hcounteren.rs  hedeleg.rs  hgatp.rs  hgeie.rs  hgeip.rs  hideleg.rs  hie.rs  hip.rs  (+16 more)
dependencies/virtio-drivers/: Cargo.toml  LICENSE  README.md
dependencies/virtio-drivers/.github/workflows/: main.yml
dependencies/virtio-drivers/examples/riscv/: Cargo.toml  Makefile  linker32.ld  linker64.ld
dependencies/virtio-drivers/src/: blk.rs  console.rs  gpu.rs  hal.rs  header.rs  input.rs  lib.rs  net.rs  queue.rs
docs/: 19036212-王炼-梁琨-基于Rust的跨平台实时操作系统的设计与优化 .docx  19036212_王炼_毕业论文（设计）中期检查表.doc  19036212_王炼_毕业论文（设计）开题报告.doc  19036212_王炼_毕业论文（设计）答辩小组评分评语表.doc毕业论文（设计）答辩记录表.doc  CFS.md  net.md
easy-fs-fuse/src/: main.rs
isofiles/boot/grub/: grub.cfg
kernel/: .gitignore  Cargo.toml  Makefile  build.rs  linker.lds
kernel/src/: config.rs  lang_items.rs  loader.rs  logging.rs  main.rs  percpu.rs  timer.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: config.rs  context.rs  instructions.rs  mod.rs  page_table.rs  trap.rs
kernel/src/arch/riscv/: config.rs  context.rs  instructions.rs  mod.rs  page_table.rs  trap.S  trap.rs
kernel/src/arch/x86_64/: config.rs  context.rs  gdt.rs  idt.rs  instructions.rs  mod.rs  page_table.rs  percpu.rs  syscall.S  syscall.rs  trap.S  trap.rs
kernel/src/boards/: qemu.rs
kernel/src/drivers/: mod.rs  vga.rs
kernel/src/drivers/block/: virtio_blk.rs
kernel/src/drivers/bus/: virtio.rs
kernel/src/drivers/interrupt/: apic.rs  gicv2.rs  i8259_pic.rs  mod.rs  riscv_intc.rs
kernel/src/drivers/misc/: mod.rs  psci.rs  qemu_x86_reset.rs  sbi.rs
kernel/src/drivers/net/: mod.rs
kernel/src/drivers/timer/: arm_generic_timer.rs  mod.rs  riscv.rs  x86_common.rs  x86_hpet.rs  x86_tsc.rs
kernel/src/drivers/uart/: mod.rs  pl011.rs  riscv.rs  uart16550.rs
kernel/src/fs/: inode.rs  stdio.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  paging.rs  uaccess.rs
kernel/src/net/: mod.rs  socket.rs  structs.rs  test.rs  udp.rs
kernel/src/platform/: mod.rs
kernel/src/platform/k210/: mod.rs
kernel/src/platform/pc/: mod.rs  multiboot.S  multiboot.rs
kernel/src/platform/qemu_virt_arm/: mod.rs
kernel/src/platform/qemu_virt_riscv/: mod.rs
kernel/src/sync/: lazy_init.rs  mod.rs  mutex.rs  percpu.rs  spin.rs  up.rs
kernel/src/syscall/: fs.rs  mod.rs  net.rs  task.rs  time.rs
kernel/src/task/: manager.rs  mod.rs  structs.rs  wait_queue.rs
kernel/src/task/schedule/: cfs.rs  forest.rs  mod.rs  rbt.rs  round_robin.rs
kernel/src/utils/: allocator.rs  irq_handler.rs  mod.rs  ratio.rs  timer_list.rs
scripts/: build_iso.sh
targets/: aarch64.json  riscv64.json  x86_64.json
user/: .gitignore  Makefile
user/c/: CMakeLists.txt  Makefile
user/c/include/: pthread.h  stdint.h  stdlib.h  time.h  unistd.h
user/c/lib/: main.c  pthread.c  stdio.c  stdlib.c  string.c  syscall.c  syscall.h  syscall_ids.h.in  time.c
user/c/lib/arch/aarch64/: clone.S  crt.S  syscall_arch.h
user/c/lib/arch/riscv/: clone.S  crt.S  syscall_arch.h
user/c/lib/arch/x86_64/: clone.S  crt.S  syscall_arch.h
user/c/src/: cyclictest.c  forktest_simple_c.c  hello_c.c
user/rust/: Cargo.toml  Makefile
user/rust/src/: console.rs  lang_items.rs  lib.rs  net.rs  syscall.rs  time.rs
user/rust/src/arch/: aarch64.rs  mod.rs  riscv.rs  x86_64.rs
(+3 files in other folders)
