[package]
name = "nerdos"
version = "0.1.0"
authors = ["Yuekai Jia <equation618@gmail.com>","Lian Wang <2331249337@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board_qemu = []
board_k210 = []
rvm = []
platform-pc = []
platform-pc-rvm = []
platform-qemu-virt-arm = []
platform-qemu-virt-riscv = []
platform-rvm-guest-x86_64 = []
default = ["platform-pc"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
xmas-elf = "0.8"
bit_field = "0.10"
tock-registers = { version = "0.7", default-features = false, features = ["register_types"] }
memoffset = { version = "0.6", features = ["unstable_const"] }
buddy_system_allocator = { version = "0.8", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "3f467dd" }
k210-pac = { path = "../dependencies/k210-pac" }
k210-hal = { path = "../dependencies/k210-hal" }
k210-soc = { path = "../dependencies/k210-soc" }



[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.47"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "10.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[build-dependencies]
toml = "0.5"
serde = "1.0"
